G_Portfolio/style.css
body {
  background-color: white;
}

.content {
  display: flex;
  flex-direction: column;
}

.description {
  width: 80vw;
  /* margin: 0 auto; */
  padding: 16px;
  border: 1px solid white;
}

.main {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  /* padding: 30px; */
  margin-top: 100px;
  justify-content: center;
}
.prev_imgs {
  display: block;
  width: 340px;
  height: 220px;
  padding: 10px;
  margin-bottom: -10px;
  object-fit: cover;
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

h1 {
  color: black;
  font-size: 40px;
  font-weight: 100;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.title {
  color: black;
  font-size: clamp(36px, 3.5vw, 50px);
  font-weight: 100;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  text-align: center;
  /* max-height: 100px; */
  /* overflow: scroll; */
  justify-content: center;
  align-items: center;
}

h2 {
  color: black;
  font-size: 20px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: 100;
}

h3 {
  color: black;
  font-size: 15px;
  font-weight: 100;
}

b {
  font-weight: 600;
}

p {
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: normal;
  margin: 0;
}

.menu {
  display: flex;
  flex-flow: row;
  /* width: 150px; */
  /* align-content: space-between; */
  background-color: whitesmoke;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 0 0px 20px 45px;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  max-height: 100px;
}

#filter {
  /* justify-self: center;
  align-self: center; */
  display: flex;
  flex-flow: column;
  position: fixed;
  border: 3px solid whitesmoke;
  background-color: white;
  border-radius: 0 0 20px 0;
  /* padding-bottom: 10px; */
  /* margin-left: -10px; */
  width: 100vw;
  justify-content: center;
}

#filterList {
  display: flex;
  flex-flow: row;
  position: relative;
  overflow-y: auto;
  max-width: 100vw;
}

.filter-item {
    display: flex;
    font-size: 17px;
    color: black;
    background-color: whitesmoke;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 100;
    width: fit-content;
    white-space: nowrap;
    text-decoration: none;
    margin: 10px;
    padding: 10px;
    border-radius: 20px;
    overflow: visible;
    /* border: 2px solid black; */
}

.filter-item .icon {
  display: inline-block;
  /* margin-left: .5vw; */
  margin-right: 5px;
  transition: transform 0.3s;
}

.filter-item.active .icon {
  transform: rotate(45deg);
}

.filter-item:hover,
.filter-item.active {
    color: whitesmoke;
    background-color: slategrey;
    text-decoration: none;
}

ul {
  list-style-type: none;
  /* margin-top: -70px; */
  padding-right: 20px;
  text-align: right;
  white-space: nowrap;
  padding-left: 8px;
}

a {
  font-style: normal;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  color: black;
  text-decoration: none;
  font-size: 20px;
}

a:hover {
  color: slategray;
  text-decoration: underline;
}

#logo {
  width: 110px;
  height: auto;
  padding-right: 30px;
  padding-top: 5px;
  /* padding: 10px; */
  /* padding-left: 20px; */
  /* align-self: left; */
  /* background-color: whitesmoke;
  border-radius: 50px; */
}

#logoButton {
  display: inline-block;
}

#logoButton:hover #logo {
  content: url(images/Menu/SVG/G-Logo-alt.svg);
}

.project {
  width: 360px;
  height: 340px;
  /* border: 1px solid black; */
  background-color: whitesmoke;
  margin: 10px;
  padding: 10px;
  overflow: hidden;
  transition: all 0.3s ease;
  /* cursor: pointer; */
  border-radius: 0 0 20px 0;
  align-self: center;
}

.project:hover {
  height: 500px;
  display: block;
}

.project .name {
  text-align: center;
  line-height: 100px;
}

.project .details {
  display: none;
}

iframe {
  display: flex;
  margin: 1vw;
  border-radius: 0 0 20px 0;
  align-self: center;
  justify-content: center;
  /* object-fit: cover; */
  width: 70vw;
}

.imgs {
  display: flex;
  width: 60vw;
  /* padding: 1vw; */
  margin: 1vw;
  border-radius: 0 0 20px 0;
  align-self: center;
  justify-content: center;
  object-fit: cover;
  min-width: 300px;
}

.imgs-in-row {
  display: flex;
  width: 36vw;
  /* margin: 1vw; */
  padding: 1vw;
  border-radius: 0 0 20px 0;
  align-self: center;
  justify-content: center;
  object-fit: cover;
  min-width: 300px;
}

.imgs-row {
  display: flex;
  flex-flow: row;
  max-width: 75vw;
  flex-wrap: wrap;
}

.imgs-column {
  display: flex;
  flex-flow: column;
}

video {
  padding: 10px;
  border-radius: 0 0 20px 0;
  max-width: 75vw;
  height: auto;
}

.about-column {
  display: flex;
  flex-flow: column-reverse;
  /* justify-content: space-between; */
  padding-right: 40px;
  max-width: 75vw;
  padding-top: 60px;
}

#pfp {
  display: flex;
  align-self: left;
  border-radius: 0 0 20px 0;
  height: 300px;
  width: 300px;
  /* justify-self: center; */
}

#loading {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000; /* Ensure it stays on top */
}

#loading img {
  width: 100px; /* Set the desired width */
  height: auto; /* Maintain aspect ratio */
}

